corrección segunda pre-entrega

--- a/index.html
+++ b/index.html
@@ -18,42 +18,36 @@
   </head>
   <body>
     <!-- navbar inicia -->
-    <nav class="navbar navbar-expand-sm  navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex justify-content-end ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="logo">
-        <span>Café Yugo</span>
+        <a class="navbar-brand" href="#"><img src="img/Logo.png" alt="">
+          <span>Café Yugo</span>
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavbar"
-        >
-          <!-- <span class="navbar-toggler-icon"></span> -->
-          <i class="fa-solid fa-bars fa-beat-fade"></i>
+        <button class="navbar-toggler text-white" type="button " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"  >
+          <i class="fa-solid fa-bars fa-lg" style="color: #1f3751;"></i>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
+              <a class="nav-link" href="/pages/productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Galeria</a>
-              </li>
-          </ul>
+              <a class="nav-link" href="/pages/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+            </li>
+
         </div>
       </div>
     </nav>
-
+    
     <!-- navbar fin -->
     <!-- jumbotron -->
     <main class=" p-5 rounded jumbotron">
@@ -77,7 +71,7 @@
     </div>
        <!-- Nosotros fin -->
 
-<h2>Nuestras variedades</h2>
+<h2>Nuestros Granos</h2>
 <div class="container fluid">
     <div class="row">
        <!-- articulo inicia -->
@@ -112,21 +106,32 @@
 </div>
 <!-- articulo fin         -->
 
-<section class="galeria">
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-  <a href="#"><img src="/img/1.jpg" alt="foto1"></a>
-     
-</section> 
+<h2>Dónde Estamos</h2>
+<div class="containerfluid dondeestamos1">
+  <div class="row m-3">
+    <div class="col-md-6 col-sm-12">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12452.442060737876!2d-62.2604489!3d-38.7152716!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95eda35291e42009%3A0x6803605b752bd15d!2zQ2Fmw6kgTWFydMOtbmV6!5e0!3m2!1ses-419!2sar!4v1692537329736!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="col-md-6 col-sm-12 dondeestamostexto">
+      <h4>Local1</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat tempore sit fuga nostrum nihil ea facilis, veniam repudiandae saepe labore iure enim accusantium delectus, earum sint placeat. In, aperiam qui!</p>
+    </div>
+  </div>
 
+</div>
+<div class="containerfluid dondeestamos2">
+  <div class="row m-3">
+    <div class="col-md-6 col-sm-12 dondeestamostexto2">
+      <h4>Local1</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat tempore sit fuga nostrum nihil ea facilis, veniam repudiandae saepe labore iure enim accusantium delectus, earum sint placeat. In, aperiam qui!</p>
+    </div>
+    <div class="col-md-6 col-sm-12">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12452.442060737876!2d-62.2604489!3d-38.7152716!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95eda35291e42009%3A0x6803605b752bd15d!2zQ2Fmw6kgTWFydMOtbmV6!5e0!3m2!1ses-419!2sar!4v1692537329736!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 
+  </div>
+
+</div>
 
 
 
