--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,42 +19,36 @@
 </head>
 <body>
      <!-- navbar inicia -->
-     <nav class="navbar navbar-expand-sm  navbar-dark col-12">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex justify-content-end ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="logo">
-          <span>Café Yugo</span>
+          <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="">
+            <span>Café Yugo</span>
           </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar"
-          >
-            <!-- <span class="navbar-toggler-icon"></span> -->
-            <i class="fa-solid fa-bars fa-beat-fade"></i>
+          <button class="navbar-toggler text-white" type="button " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"  >
+            <i class="fa-solid fa-bars fa-lg" style="color: #1f3751;"></i>
           </button>
-          <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Productos</a>
+                <a class="nav-link" href="/pages/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
+                <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Galeria</a>
-                </li>
-            </ul>
+                <a class="nav-link" href="/pages/blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+              </li>
+  
           </div>
         </div>
       </nav>
-    <!-- ----------------navbarfin-------------- -->
+      <!-- ----------------navbarfin-------------- -->
 <!-- -----------contenedor------------- -->
     <div class="divcontenedor text-center mt-5">
         <h1 class="tituloblog">BLOGS</h1>
@@ -64,7 +58,7 @@
         <div class="card shadow blogs">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
@@ -86,7 +80,7 @@
         <div class="card shadow">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog2</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
@@ -97,7 +91,7 @@
         <div class="card shadow">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog3</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
@@ -108,7 +102,7 @@
         <div class="card shadow">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog4</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
@@ -119,7 +113,7 @@
         <div class="card shadow">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog5</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
@@ -130,7 +124,7 @@
         <div class="card shadow">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog6</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
@@ -141,7 +135,7 @@
         <div class="card shadow">
             <img src="/img/4.jpg" alt="blog1" class="card-img-top">
             <div class="card-body">
-                <h4>Blog1</h4>
+                <h4>Blog7</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt!</p>
                 <a href="#" class="btn btn-sm">Continua Leyendo </a>
             </div>
