--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,38 +18,32 @@
   </head>
   <body>
     <!-- navbar inicia -->
-    <nav class="navbar navbar-expand-sm  navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex justify-content-end ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="logo">
-        <span>Café Yugo</span>
+        <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="">
+          <span>Café Yugo</span>
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavbar"
-        >
-          <!-- <span class="navbar-toggler-icon"></span> -->
-          <i class="fa-solid fa-bars fa-beat-fade"></i>
+        <button class="navbar-toggler text-white" type="button " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"  >
+          <i class="fa-solid fa-bars fa-lg" style="color: #1f3751;"></i>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
+              <a class="nav-link" href="/pages/productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Galeria</a>
-              </li>
-          </ul>
+              <a class="nav-link" href="/pages/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+            </li>
+
         </div>
       </div>
     </nav>
@@ -70,19 +64,19 @@
   <div class="row">
    
     <div class="col-md-4">
-      <img src="/img/6.jpg" alt="Rodrigo">
+      <img src="/img/rodrigo.jpeg" alt="Rodrigo">
       <h3>Rodrigo</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div> 
     <div class="col-md-4">
-      <img src="/img/6.jpg" alt="Rodrigo">
+      <img src="/img/jason.jpg" alt="Jason">
 
-      <h3>Rodrigo</h3>
+      <h3>Jason</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div> 
     <div class="col-md-4">
-      <img src="/img/6.jpg" alt="Rodrigo">
-      <h3>Rodrigo</h3>
+      <img src="/img/bruno.jpg" alt="Bruno">
+      <h3>Bruno</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div> 
 
