--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,48 +18,42 @@
   </head>
   <body>
     <!-- navbar inicia -->
-    <nav class="navbar navbar-expand-sm  navbar-dark col-12">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary d-flex justify-content-end ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="logo">
-        <span>Café Yugo</span>
+        <a class="navbar-brand" href="#"><img src="/img/Logo.png" alt="">
+          <span>Café Yugo</span>
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavbar"
-        >
-          <!-- <span class="navbar-toggler-icon"></span> -->
-          <i class="fa-solid fa-bars fa-beat-fade"></i>
+        <button class="navbar-toggler text-white" type="button " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"  >
+          <i class="fa-solid fa-bars fa-lg" style="color: #1f3751;"></i>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
+              <a class="nav-link" href="/pages/productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Galeria</a>
-              </li>
-          </ul>
+              <a class="nav-link" href="/pages/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+            </li>
+
         </div>
       </div>
     </nav>
 
     <!-- navbar fin -->
 
-<div class="containerfluid productos">
-    <div class="row justify-content-center">
+<div class="containerfluid productos p-4 ">
+    <div class="row justify-content-center  ">
 
-        <div  class="productx col-lg-3 col-md-4 col-sm-6 col-xs-12 m-10  card" style="width:600px p-5">
+        <div  class="productx col-lg-3 col-md-4 col-sm-6 col-xs-12 m-10 card " style="width:600px p-5">
             <img class="card-img-top" src="/img/3.jpg" alt="producto1">
             <div class="card-body">
               <h4 class="card-title d-flex justify-content-center">Productox</h4>
